--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -386,27 +386,103 @@ a:hover {
   filter: drop-shadow(10px 10px 20px rgb(255, 67, 161));
 }
 
+
+.eleven_b {
+  position: absolute;
+
+  width: 300px;
+  height: auto; 
+  top: 140vh; 
+  left: 206vw; 
+  margin: 20px;
+
+  
+}
+
+.elevenb {
+  position: absolute;
+
+  width: 300px;
+  height: auto; 
+  margin: 20px;
+  filter: drop-shadow(10px 10px 20px rgb(255, 67, 161));
+
+  
+}
+
+
 .eleven_popup_b img{
+  
   position: absolute;
-
-  width: 400px;
+  width: 300px;
   height: auto; 
-  top: 1000px; 
-  left: 2300px;
-  box-shadow: 2px 2px 10px rgb(255, 67, 161), -2px -2px 10px rgb(255, 67, 161);  
+  top: 140vh; 
+  left: 206vw; 
   margin: 20px;
+  filter: drop-shadow(10px 10px 20px rgb(255, 67, 161));
 }
 
-.eleven_popup_c img{
+.eleven_popup_c {
+  display: none;
+  position: absolute;
+ 
+  width: 350vw;
+  height: 350vh; 
+
+  margin: 20px;
+  background-color:  rgba(0, 0, 0, 0.7);
+  z-index: 1000;
+}
+
+
+
+.floor{
+  
   position: absolute;
 
-  width: 200px;
+  width: 800px;
   height: auto; 
-  top: 1000px; 
-  left: 2200px;
-  animation: glow 1s infinite alternate;
   margin: 20px;
+  left: 140vw; 
+  top: 120vh;
+
 }
+
+.floorb{
+  
+  position: absolute;
+
+  width: 800px;
+  height: auto; 
+  margin: 20px;
+  left: 190vw; 
+  top: 150vh;
+
+}
+
+#close-floorplan{
+  
+  position: absolute;
+  left: 230vw; 
+  top: 120vh;
+  margin-top: 10px;
+  cursor: pointer;
+  background: transparent;
+  border: 2px 2px 5px rgb(255, 114, 239);
+  height: 60px;
+  font-family: 'Cantique';
+  text-shadow: 2px 2px 5px rgb(255, 114, 239);
+  color: rgb(255, 211, 33);
+  font-size: 30px;
+
+}
+
+
+
+
+
+
+
 
 
 .overlay {
@@ -419,7 +495,7 @@ a:hover {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgb(255, 211, 33);
+  background-color:  rgb(255, 67, 161);
   z-index: 999; /* Ensure it's above other content */
 }
 
