--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,18 +20,60 @@
   src: url('/Cantique-Normal.woff') format('woff');
 }
 
+#info-toggle {
+  position: absolute;
+  left: 85%;
+  align-items: center;
+  margin-top: 10px;
+  cursor: pointer;
+  background: transparent;
+  border: transparent;
+  font-family: 'Coconat-Bold';
+  text-shadow: 2px 2px 5px #FF00FF;
+  color: #FFCE00;
+  font-size: 30px;
+}
+
+#info-close {
+  position: absolute;
+  left: 85%;
+  margin-top: 10px;
+  cursor: pointer;
+  background: transparent;
+  border: transparent;
+  font-family: 'Coconat-Bold';
+  text-shadow: 2px 2px 5px #FF00FF;
+  color: #FFCE00;
+  font-size: 30px;
+}
+
+.information{
+  display: none;
+  width: 100%;
+  top: 0%;
+  height: 100%;
+  position: absolute;
+  align-items: center;
+  text-align: center;
+  background-color:black;
+z-index: 999;
+}
+
+.info-text{
+  font-size: 18px;
+  color: white;
+}
+
+
 .background-image {
   width: 350vw; /* Adjust this value to make the background image larger */
   height: 350vh; /* Adjust this value to make the background image larger */
   background-image: url("/assets/backdrop1.png");
   background-size: 350vw 350vh;
-  background-position: center;
   left: -100vw;
   top: -120vh; /* Center the image vertically in the viewport */
-
   position: absolute;
   z-index: 0;
-
 
 }
 
@@ -180,8 +222,8 @@ a:hover {
   position: absolute;
   width: 300px; /* Adjust the width as needed */
   height: auto; /* Maintain aspect ratio */
-  top: 1600px; 
-  left: -1000px;
+  top: 177vh; 
+  left: -60vw;
   animation: glow 1s infinite alternate;
 }
 
@@ -196,19 +238,19 @@ a:hover {
 
 .two_b img {
   position: absolute;
-  width: 200px; /* Adjust the width as needed */
+  width: 25vw; /* Adjust the width as needed */
   height: auto; /* Maintain aspect ratio */
-  top: 400px; 
-  left: -1600px;
-  animation: glow 1s infinite alternate;
+  top: 10vh; 
+  left: -95vw;
+  filter: drop-shadow(10px 10px 20px rgb(255, 67, 161));
 }
 
 .two_c img {
   position: absolute;
   width: 400px; /* Adjust the width as needed */
   height: auto; /* Maintain aspect ratio */
-  top: 100px; 
-  left: -800px; 
+  top: 15vh; 
+  left: -40vw; 
   filter: drop-shadow(10px 10px 20px rgb(255, 67, 161));
 }
 
@@ -225,8 +267,8 @@ a:hover {
   position: absolute;
   width: 300px; /* Adjust the width as needed */
   height: auto; /* Maintain aspect ratio */
-  top: -200px; 
-  left: -1000px;
+  top: -20vh; 
+  left: -50vw;
   animation: glow 1s infinite alternate;
 }
 
@@ -235,8 +277,8 @@ a:hover {
 
   width: 200px; /* Adjust the width as needed */
   height: auto; /* Maintain aspect ratio */
-  top: -1080px; 
-  left: -1480px;
+  top: -122vh; 
+  left: -87vw;
   margin: 20px;
   filter: drop-shadow(10px 10px 20px rgb(255, 67, 161));
   
@@ -247,9 +289,9 @@ a:hover {
 
   width: 300px;
   height: auto; 
-  top: -400px; 
-  left: -1500px;
-  animation: glow 1s infinite alternate;
+  top: -60vh; 
+  left: -80vw;
+  filter: drop-shadow(10px 10px 20px rgb(255, 67, 161));
   margin: 20px;
 }
 
@@ -258,18 +300,19 @@ a:hover {
 
   width: 400px;
   height: auto; 
-  top: -900px; 
-  left: -100px;
+  top: -100vh; 
+  left: -5vw;
   margin: 20px;
   filter: drop-shadow(10px 10px 20px rgb(255, 67, 161));
+  z-index: 999;
 }
 
 .four_a img {
   position: absolute;
-  width: 400px; /* Adjust the width as needed */
+  width: 27vw; /* Adjust the width as needed */
   height: auto; /* Maintain aspect ratio */
-  left: 200px;
-  top: -650px; 
+  left: 10vw;
+  top: -75vh; 
   animation: glow 1s infinite alternate;
 }
 
@@ -277,16 +320,16 @@ a:hover {
   position: absolute;
   width: 200px; /* Adjust the width as needed */
   height: auto; /* Maintain aspect ratio */
-  left: 230px;
-  top: -90px; 
+  left: 13vw;
+  top: -13vh; 
   filter: drop-shadow(10px 10px 20px rgb(255, 67, 161));
 }
 .five_b img {
   position: absolute;
   width: 400px; /* Adjust the width as needed */
   height: auto; /* Maintain aspect ratio */
-  left: 290px;
-  top: 300px; 
+  left: 17vw;
+  top: 42vh; 
   animation: glow 1s infinite alternate;
 }
 
@@ -294,17 +337,17 @@ a:hover {
   position: absolute;
   width: 500px; /* Adjust the width as needed */
   height: auto; /* Maintain aspect ratio */
-  left: 150px;
-  top: 70vh; 
+  left: 5vw;
+  top: 74vh; 
   filter: drop-shadow(10px 10px 20px rgb(255, 67, 161));
 }
 
 .five_d img {
   position: absolute;
-  width: 450px; /* Adjust the width as needed */
+  width: 25vw; /* Adjust the width as needed */
   height: auto; /* Maintain aspect ratio */
-  left: 860px;
-  top: 60px;
+  left:50vw;
+  top: 5vh;
   filter: drop-shadow(10px 10px 20px rgb(255, 67, 161));
 }
 
@@ -312,8 +355,8 @@ a:hover {
   position: absolute;
   width: 370px; /* Adjust the width as needed */
   height: auto; /* Maintain aspect ratio */
-  left: 250px;
-  top: 1100px; 
+  left: 9vw;
+  top: 130vh; 
   filter: drop-shadow(10px 10px 20px rgb(255, 67, 161));
 }
 
@@ -323,8 +366,8 @@ a:hover {
 
   width: 300px;
   height: auto; 
-  top: -1000px; 
-  left: 3800px;
+  top: -100vh; 
+  left: 220vw;
   animation: glow 1s infinite alternate;
   margin: 20px;
 }
@@ -333,10 +376,10 @@ a:hover {
 .seven_b img{
   position: absolute;
 
-  width: 300px;
+  width: 35vw;
   height: auto; 
-  top: 10vh; 
-  left: 220vw;
+  top: -67vh; 
+  left: 212vw;
   animation: glow 1s infinite alternate;
   margin: 20px;
 }
@@ -468,10 +511,10 @@ a:hover {
   margin-top: 10px;
   cursor: pointer;
   background: transparent;
-  border: 2px 2px 5px rgb(255, 114, 239);
+  border: 2px 2px 5px #FF00FF;
   height: 60px;
   font-family: 'Cantique';
-  text-shadow: 2px 2px 5px rgb(255, 114, 239);
+  text-shadow: 2px 2px 5px #FF00FF;
   color: rgb(255, 211, 33);
   font-size: 30px;
 
@@ -495,7 +538,7 @@ a:hover {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color:  rgb(255, 67, 161);
+  background-color:  black;
   z-index: 999; /* Ensure it's above other content */
 }
 
@@ -511,18 +554,26 @@ a:hover {
 
 .Text {
   font-family: 'Coconat-Regular';
-  font-size: 20px;
-  text-shadow: 2px 1px 2px rgb(255, 77, 219);
-  color: rgb(76, 0, 255);
+  font-size: 18px;
+  text-shadow:2px 2px 2px #FF00FF;
+  color: #0A00FF;
   
 }
 
+.sub {
+  font-family: 'Coconat-Bold';
+  font-size: 18px;
+  text-shadow:2px 2px 2px #FF00FF;
+  color: #0A00FF;
+  
+}
 
 .title {
+  padding-top: 14%;
   font-family: 'Cantique';
   font-size: 40px;
-  color: rgb(60, 0, 255);
-  text-shadow: 2px 1px 2px rgb(255, 94, 236); 
+  color: #0A00FF;
+  text-shadow: 2px 2px 2px #FF00FF; 
 }
 
 
@@ -533,8 +584,8 @@ a:hover {
   background: transparent;
   border: transparent;
   font-family: 'Coconat-Bold';
-  text-shadow: 2px 2px 5px rgb(255, 114, 239);
-  color: rgb(255, 211, 33);
+  text-shadow: 2px 2px 5px #FF00FF;
+  color: #FFCE00;
   font-size: 30px;
 }
 
