--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,7 @@
   width: 100%;
   top: 0%;
   left: 0%;
-  height: 600%;
+  height: 700%;
   position: absolute;
   align-items: center;
   text-align: center;
@@ -63,7 +63,17 @@ z-index: 999;
 }
 
 .info-text{
-  font-size: 18px;
+  font-size: 1vw;
+  color: white;
+  text-align: left;
+  align-items: center;
+  margin-left: 7%;
+  margin-right: 7%;
+  font-family: 'Coconat-Regular';
+  
+}
+.footnotes{
+  font-size: 10px;
   color: white;
   text-align: left;
   align-items: center;
